--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
         <img src="./img/toolbar-left.png" class="toolbar" id="toolbar1">
         <img src="./img/toolbar-right.png" class="toolbar" id="toolbar2">
         <script type="module">
-            import BHR from "./bootstrap.js";
-            BHR.game.ride(decodeURIComponent(location.hash.substr(1)));
+            import BHR from "bootstrap.js";
+            //BHR.game.ride(decodeURIComponent(location.hash.substr(1)));
         </script>
         
     </div>
