--- a/index.html
+++ b/index.html
@@ -113,11 +113,12 @@
 <body>
     <div id="content" class="container clearfix">
         <canvas data-play="openrider" width="700" height="400"></canvas>
-        <img src="./img/toolbar-left.png" class="toolbar" id="toolbar1">
-        <img src="./img/toolbar-right.png" class="toolbar" id="toolbar2">
+        <img src="/img/toolbar-left.png" class="toolbar" id="toolbar1">
+        <img src="/img/toolbar-right.png" class="toolbar" id="toolbar2">
+        <script 
         <script type="module">
-            import BHR from "bootstrap.js";
-            //BHR.game.ride(decodeURIComponent(location.hash.substr(1)));
+            import BHR from "/bootstrap.js";
+            BHR.game.ride(decodeURIComponent(location.hash.substr(1)));
         </script>
         
     </div>
